# amplify-mediastore-client

./: README.md  apiclient.py  pyproject.toml  requirements.txt  test.py
media_store_client/: __init__.py  apiclient.py
media_store_client/utils/: custom_exception.py
utils/: api_response.py  common_methods.py  custom_exception.py
