[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media_store_client"
version = "0.1.0"
description = "Client library for interacting with AMPLIfy Media Store"
readme = "README.md"
authors = [{name = "Shravani Nagala", email = "shravani.nagala@whoi.edu"},{name = "Benjamin Foley", email = "benjamin.foley@whoi.edu"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['schemas','messaging','amplify']
dependencies = [
    "pydantic",
    "requests",
    "amplify-schemas @ git+https://github.com/WHOIGit/amplify-schemas"
]

[tool.hatch.build.targets.wheel]
packages = ["media_store_client"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/WHOIGit/amplify-mediastore-client"
